--- a/README
+++ b/README
@@ -1,24 +1,33 @@
-#License#
-bitHopper by Colin Rice is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License.
-Based on a work at github.com.
+# License
+ 
+bitHopper by Colin Rice is licensed under a Creative Commons
+Attribution-NonCommercial-ShareAlike 3.0 Unported License.  Based on a work at
+github.com.
 
-#Instructions#
-In order to run bithopper you need twisted phython installed.
+# Instructions
+
+In order to run bithopper you need twisted phython installed:
+
 http://twistedmatrix.com/trac
 
-Modify python password.py to include your bitcoin addresses instead of mine.
+Copy password.py.default to a new file called python.py then modify the new
+file to include your bitcoin addresses instead of mine.
 
 Run python bitHopper.py
 
-It listens on localhost:8337.
-So you should direct your miner to localhost:8337.
+It listens on localhost:8337.  So you should direct your miner to
+localhost:8337.
 
-#Windows installation
-Download and install 
+# Windows installation
+
+Download and install:
+
 https://launchpad.net/pyopenssl
 http://pypi.python.org/pypi/zope.interface
-http://twistedmatrix.com/trac
-Then follow the above instructions
+http://twistedmatrix.com/trac Then
+
+follow the above instructions
 
 #Donations
+
 1HEmzeuVEKxBQkEenysV1yM8oAddQ4o2TX
