--- a/README
+++ b/README
@@ -13,6 +13,8 @@ http://twistedmatrix.com/trac
 Copy password.py.default to a new file called password.py then modify the new
 file to include your bitcoin addresses, and pool passwords, instead of mine.
 
+If you don't want to use a pool give it an invalid password, or go to localhost:8337/stats and switch its role to disable.
+
 Run python bitHopper.py
 
 It listens on localhost:8337.  So you should direct your miner to
