--- a/README
+++ b/README
@@ -17,7 +17,7 @@ have been added correctly if not edit your "user.cfg" accordingly.
 
 If you don't want to use a pool give it an invalid password (WARNING: some pools
 ignore passwords from miners!), or go to http://localhost:8337/stats and switch its
-role to disable, or just delete it from "pools.cfg".
+role to disable, or just delete it from "user.cfg".
 
 BitHopper listens on loopback interface so you should direct your miner to
 localhost:8337 with any username and password (not blank).
