Added freenode irc channel to README

--- a/README
+++ b/README
@@ -76,7 +76,7 @@ Not currently in use.
 # More help
 
 You can go to https://github.com/c00w/bitHopper/wiki and start reading the bitHopper wiki or ask for help in the oficial forum
-at https://bitcointalk.org/index.php?topic=26866
+at https://bitcointalk.org/index.php?topic=26866. Join us on Freenode (http://webchat.freenode.net/) #bithopper channel.
 
 
 #Donations
