--- a/README
+++ b/README
@@ -46,9 +46,6 @@ You can launch bH with the following parameters:
 	--listschedulers  = List alternate schedulers available
 	--scheduler       = Select an alternate scheduler
 	--threshold       = Override difficulty threshold (default 0.43)
-	--altslicesize    = Override Default AltSliceScheduler Slice Size of 900
-	--altminslicesize = Override Default Minimum Pool Slice Size of 60 (AltSliceScheduler only)
-	--altslicejitter  = Add some random variance to slice size, disabled by default (AltSliceScheduler only)
 	--p2pLP           = Starts up an IRC bot to validate LP based hopping
 	--debug           = Use twisted output
 
@@ -66,6 +63,16 @@ The time based default scheduler. All that matters is time and it tries to be co
    AltSliceScheduler
 
 Tries to be more aggressive at switching pools when thresholds are met rather than finishing a slice. Can be used with --altslicesize=xxx --altminslicesize=xxx (where you replace x with a number for slice size and min). Also slice size can be used with --altslicejitter=xx which adds some random variance to slice size. There can be issues with failing to re-slice often enough.
+
+Specific parameters:
+
+	--altslicesize            = Override Default AltSliceScheduler Slice Size of 900
+	--altminslicesize         = Override Default Minimum Pool Slice Size of 60 (AltSliceScheduler only)
+	--altslicejitter          = Add some random variance to slice size, disabled by default (AltSliceScheduler only)
+	--altsliceroundtimebias   = Bias slicing slightly by round time duration with respect to round time target (default false)
+	--altsliceroundtimetarget = Round time target based on GHash/s (default 1000 Ghash/s)
+	--altsliceroundtimemagic  = Round time magic number, increase to bias towards round time over shares
+
 
    RoundTimeScheduler
 
