--- a/README
+++ b/README
@@ -40,14 +40,16 @@ Then follow the above instructions
 
 You can launch bH with the following parameters:
 
-	--ip              = IP to listen on
-	--port            = Port to listen on
-	--auth            = Ask for user and password on stats page (--auth user,pass)
-	--listschedulers  = List alternate schedulers available
-	--scheduler       = Select an alternate scheduler
-	--threshold       = Override difficulty threshold (default 0.43)
-	--p2pLP           = Starts up an IRC bot to validate LP based hopping
-	--debug           = Use twisted output
+	--ip                  = IP to listen on
+	--port                = Port to listen on
+	--auth                = Ask for user and password on stats page (--auth user,pass)
+	--listschedulers      = List alternate schedulers available
+	--scheduler           = Select an alternate scheduler
+	--threshold           = Override difficulty threshold (default 0.43)
+	--p2pLP               = Starts up an IRC bot to validate LP based hopping
+	--OldConnectionSystem = Uses the old connection system. May help with lots of miners
+	--debug               = Log twisted output
+	--trace               = Extra debugging output
 
 
 # Available Schedulers:
