--- a/README
+++ b/README
@@ -10,6 +10,7 @@ In order to run bithopper you need eventlet and pyopenssl installed with Python 
 http://python.org/download/
 https://launchpad.net/pyopenssl/+download
 http://pypi.python.org/pypi/eventlet/
+http://pypi.python.org/pypi/WebOb/1.1rc1
 
 Copy "user.cfg.default" to a new file called "user.cfg" then modify the new
 file to include your pool worker usernames and passwords, instead of mine.
@@ -28,12 +29,13 @@ Download and install:
 http://python.org/download/
 https://launchpad.net/pyopenssl/+download
 http://pypi.python.org/pypi/eventlet/
+http://pypi.python.org/pypi/WebOb/1.1rc1
 
 # Ubuntu installation
 sudo apt-get install python
 sudo apt-get install python-eventlet
 sudo apt-get install python-openssl
-
+sudo apt-get install webob
 
 Then follow the above instructions
 
