--- a/README
+++ b/README
@@ -10,6 +10,7 @@ In order to run bithopper you need eventlet and pyopenssl installed with Python 
 http://python.org/download/
 https://launchpad.net/pyopenssl/+download
 http://pypi.python.org/pypi/greenlet
+-Download the source and run setup.py install
 
 Copy "user.cfg.default" to a new file called "user.cfg" then modify the new
 file to include your pool worker usernames and passwords, instead of mine.
