--- a/README
+++ b/README
@@ -8,7 +8,6 @@ Based on a work at github.com
 In order to run bithopper you need eventlet and pyopenssl installed with Python 2.7 (recommended):
 
 http://python.org/download/
-https://launchpad.net/pyopenssl/+download
 http://pypi.python.org/pypi/greenlet
 -Download the source and run setup.py install
 
@@ -27,12 +26,11 @@ BitHopper status page: http://localhost:8337/stats
 
 Download and install:
 http://python.org/download/
-https://launchpad.net/pyopenssl/+download
 http://pypi.python.org/pypi/greenlet
+-Download the source and run setup.py install
 
 # Ubuntu installation
 sudo apt-get install python
-sudo apt-get install python-openssl
 sudo apt-get install python-greenlet
 
 Then follow the above instructions
