--- a/README
+++ b/README
@@ -13,6 +13,8 @@ installed version of Python with "python -V"):
 sudo apt-get install python-dev python-setuptools
 sudo easy_install greenlet
 
+Tested and woking for Ubuntu 11.04, 10.10 and 10.04 LTS
+
 
 # Instructions for Windows users
 
@@ -59,8 +61,6 @@ If any of the pools turns red or there is something else missing then edit your 
 If you don't want to use a pool delete it from "user.cfg" or go to Stats page and switch its role to
 disable. BitHopper listens on loopback interface so you should direct your miner to localhost:8337
 with any username and password (not blank).
-
-
 
 
 # Switches
