Donations for bH

--- a/README
+++ b/README
@@ -130,4 +130,15 @@ at https://bitcointalk.org/index.php?topic=26866. Join us on Freenode (http://we
 
 # Donations
 
-1HEmzeuVEKxBQkEenysV1yM8oAddQ4o2TX
+If you think this project is cool and you want more features added consider making a donation, anything counts ;)
+
+ 1HEmzeuVEKxBQkEenysV1yM8oAddQ4o2TX - c00w
+
+ 17wp2zfxZKeycWt6NKiueVYmYyrciiuq2t - ryouiki
+ 1mhFNL38eBeyz6EFHMjZbZzzByzAwDM68  - flower1024
+ 1CWjg4soWEAQjMD4dCchdPpJ6fWDBRUU5b - ed64
+ 1QEBu4Tr7Qe6BMHdpeTmNDTPJhMqpDDtQ3 - paraipanakos
+ 13hP5QuFccLUZQDNxPwnfmn6q5RiV48TEn - macboy80
+
+ All the people who contribute to this project - https://github.com/c00w/bitHopper/network/members
+
