Added sdogi to contributors

--- a/README
+++ b/README
@@ -140,6 +140,7 @@ If you think this project is cool and you want more features added consider maki
  15iS8iDqVCM2MF5ndaS3exR7Kw4LxFf2ra - hawks5999
  1QEBu4Tr7Qe6BMHdpeTmNDTPJhMqpDDtQ3 - paraipanakos
  13hP5QuFccLUZQDNxPwnfmn6q5RiV48TEn - macboy80
+ 1GgorPurRdDgsbPmoGEJm2WWGxKkJ8ktkf - sdogi
 
  All the people who contribute to this project - https://github.com/c00w/bitHopper/network/members
 
