New contrib to README

--- a/README
+++ b/README
@@ -144,5 +144,5 @@ If you think this project is cool and you want more features added consider maki
 
  flower1024, echiu64 (ed64), graphiclunarkid, elitak, Clipseza, littleant, bb-btc, gnaget, murfshake, Sukrim, gtrrkicw,
  swordv2, bitcoindaddy, rkozola, ryouiki, starlightbreaker, hawks5999, erasmo, pueytan, macboy80, sdogi, joulesbeef,
- Seoulboy1, paraipanakos, Swicher
+ Seoulboy1, paraipanakos, Swicher, lucita777
 
