--- a/README
+++ b/README
@@ -7,11 +7,20 @@ Based on a work at github.com
 
 # Ubuntu installation
 
-In order to run bitHopper you need to install greenlet module over Python 2.7+ (lookup your allready
-installed version of Python with "python -V"):
+In order to run bitHopper you need to install greenlet module with Python. Version 2.7 for Python is suggested
+although it has been tested with version 2.6 too(to find out which version of Python your system currently has
+you have to type "python -V" to a console.
+
+If you don't have Python installed you have to run:
+
+sudo apt-get install python
+
+If you have Python installed then you have to install some other packages that bitHopper requires to
+function properly:
 
 sudo apt-get install python-dev python-setuptools
 sudo easy_install greenlet
+sudo easy_install importlib
 
 Tested and woking for Ubuntu 11.04, 10.10 and 10.04 LTS
 
