--- a/README
+++ b/README
@@ -78,8 +78,8 @@ with any username and password (not blank).
 
 # Switches
 
-You can launch bitHopper with the following parameters (some get overwriten at runtime by the ones you set-up
-in "bh.cfg"):
+You can launch bitHopper with the following parameters (some get overwriten at runtime by the ones
+you set-up in "bh.cfg"):
 
    --ip                  = IP to listen on
    --port                = Port to listen on
@@ -90,6 +90,7 @@ in "bh.cfg"):
    --p2pLP               = Starts up an IRC bot to validate LP based hopping
    --debug               = Extra error output. Basically print all caught errors
    --trace               = Extra debugging output
+   --logconnections      = Show connection log
 
 
 # Available Schedulers:
