--- a/README
+++ b/README
@@ -84,6 +84,7 @@ you set-up in "bh.cfg"):
    --ip                  = IP to listen on
    --port                = Port to listen on
    --auth                = Ask for user and password on stats page (--auth user,pass)
+   --config              = Select an alternate main config file from "bh.cfg"
    --listschedulers      = List alternate schedulers available
    --scheduler           = Select an alternate scheduler
    --threshold           = Override difficulty threshold (default 0.43)
