Upd contributors list

--- a/README
+++ b/README
@@ -153,7 +153,7 @@ If you think this project is cool and you want more features added consider maki
  1HEmzeuVEKxBQkEenysV1yM8oAddQ4o2TX - c00w
 
  17wp2zfxZKeycWt6NKiueVYmYyrciiuq2t - ryouiki
- 1CWjg4soWEAQjMD4dCchdPpJ6fWDBRUU5b - ed64
+ 1CWjg4soWEAQjMD4dCchdPpJ6fWDBRUU5b - echiu64
  15iS8iDqVCM2MF5ndaS3exR7Kw4LxFf2ra - hawks5999
  1QEBu4Tr7Qe6BMHdpeTmNDTPJhMqpDDtQ3 - paraipanakos
  13hP5QuFccLUZQDNxPwnfmn6q5RiV48TEn - macboy80
@@ -163,5 +163,5 @@ If you think this project is cool and you want more features added consider maki
 
  flower1024, echiu64 (ed64), graphiclunarkid, elitak, Clipseza, littleant, bb-btc, gnaget, murfshake, Sukrim, gtrrkicw,
  swordv2, bitcoindaddy, rkozola, ryouiki, starlightbreaker, hawks5999, erasmo, pueytan, macboy80, sdogi, joulesbeef,
- Seoulboy1, paraipanakos, Swicher, lucita777
+ Seoulboy1, paraipanakos, Swicher, lucita777, TenthReality, dfc (Douglas Calvert), dadittoz
 
