--- a/README
+++ b/README
@@ -148,7 +148,7 @@ at https://bitcointalk.org/index.php?topic=26866. Join us on Freenode (http://we
 
 # Donations
 
-If you think this project is cool and you want more features added and bugs hunted down then consider making a donation, anything counts ;)
+If you think this project is cool and you want more features added or bugs hunted down then consider making a donation, anything counts ;)
 or having "Donation" pool enabled in your stats page (setup donation percent in your "pools.cfg" - default 1%)
 
  1HEmzeuVEKxBQkEenysV1yM8oAddQ4o2TX - c00w
