--- a/README
+++ b/README
@@ -82,8 +82,8 @@ LP Workbench: http://localhost:8337/lpworkbench
 See:
  Block Hash, Owner, LP Timings as deltas against winning "owner"
 
-Able to override the owner
-List of pools, role and LP penalties for easy access to adjust penalties
+You can view the list of active pools, override the owner and have easy access to adjust penalties
+
 
 # Switches
 
